Remplacement des motifs {{, }}, {% et %} par un affichage en mode raw : {% raw %}{{{% endraw %}

--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -15,8 +15,8 @@ LiquidJS est un moteur de modèles compatible [Shopify](https://github.com/Shopi
 
 La syntaxe LiquidJS est relativement simple. Il existe 2 types de balises dans LiquidJS :
 
-- **Tags** : Une balise se compose d'un nom de balise et d'arguments facultatifs entourés entre `{ %` et `% }`.
-- **Outputs** : Une sortie consiste en une valeur et une liste de filtres, facultative, entourée entre `{{` et `}}`.
+- **Tags** : Une balise se compose d'un nom de balise et d'arguments facultatifs entourés entre `{% raw %}{%{% endraw %}` et `{% raw %}%}{% endraw %}`.
+- **Outputs** : Une sortie consiste en une valeur et une liste de filtres, facultative, entourée entre `{% raw %}{{{% endraw %}` et `{% raw %}}}{% endraw %}`.
 
 > **Live Demo** : Before going into the details, here’s a live demo to play around: https://liquidjs.com/playground.html.
 
@@ -25,17 +25,17 @@ La syntaxe LiquidJS est relativement simple. Il existe 2 types de balises dans L
 Les « Outputs » sont utilisées pour générer des variables, qui peuvent être transformées par des filtres, en HTML. Le modèle suivant insérera la valeur de `username` dans la valeur de l'entrée :
 
 ``` html
-<input type="text" name="user" value="{{username}}">
+<input type="text" name="user" value="{% raw %}{{{% endraw %}username{% raw %}}}{% endraw %}">
 ```
 
 Les valeurs en sortie peuvent être transformées par des filtres avant la sortie. Pour ajouter une chaîne après la variable :
 ``` js
-{{ username | append: ", welcome to LiquidJS!" }}
+{% raw %}{{{% endraw %} username | append: ", welcome to LiquidJS!" {% raw %}}}{% endraw %}
 ```
 
 Les filtres peuvent être chaînés :
 ``` js
-{{ username | append: ", welcome to LiquidJS!" | capitalize }}
+{% raw %}{{{% endraw %} username | append: ", welcome to LiquidJS!" | capitalize {% raw %}}}{% endraw %}
 ```
 
 Une liste complète des filtres pris en charge par LiquidJS peut être trouvée [ici](https://liquidjs.com/filters/overview.html){:target="_blank"}.
@@ -46,17 +46,17 @@ Les `Tags` sont utilisées pour contrôler le processus de rendu du modèle, la 
 
 
 ``` js
-{ % assign foo = "FOO" % }
+{% raw %}{%{% endraw %} assign foo = "FOO" {% raw %}%}{% endraw %}
 ```
 
 Généralement, les balises apparaissent par paires avec une balise de début et une balise de fin correspondante. Par exemple:
 
 ``` js
-{ % if foo == "FOO" % }
+{% raw %}{%{% endraw %} if foo == "FOO" {% raw %}%}{% endraw %}
     Variable `foo` equals "FOO"
-{ % else % }
+{% raw %}{%{% endraw %} else {% raw %}%}{% endraw %}
     Variable `foo` not equals "FOO"
-{ % endif % }
+{% raw %}{%{% endraw %} endif {% raw %}%}{% endraw %}
 ```
 
 Une liste complète des balises prises en charge par LiquidJS peut être trouvée [ici](https://liquidjs.com/tags/overview.html){:target="_blank"}.
@@ -71,7 +71,7 @@ var { Liquid } = require('liquidjs');
 var engine = new Liquid();
 
 engine
-    .parseAndRender('{{name | capitalize}}', {name: 'alice'})
+    .parseAndRender('{% raw %}{{{% endraw %}name | capitalize{% raw %}}}{% endraw %}', {name: 'alice'})
     .then(console.log);     // outputs 'Alice'
 ```
 
@@ -84,7 +84,7 @@ import { Liquid } from 'liquidjs';
 const engine = new Liquid();
 
 engine
-    .parseAndRender('{{name | capitalize}}', {name: 'alice'})
+    .parseAndRender('{% raw %}{{{% endraw %}name | capitalize{% raw %}}}{% endraw %}', {name: 'alice'})
     .then(console.log);     // outputs 'Alice'
 ```
 
@@ -108,7 +108,7 @@ Des bundles UMD prédéfinis sont également disponibles :
 LiquidJS peut également être utilisé pour restituer un modèle directement depuis la CLI en utilisant `npx` :
 
 ``` bash
-npx liquidjs --template '{{"hello" | capitalize}}'
+npx liquidjs --template '{% raw %}{{{% endraw %}"hello" | capitalize{% raw %}}}{% endraw %}'
 ```
 
 Vous pouvez soit transmettre le modèle en ligne (comme indiqué ci-dessus), soit le lire à partir d'un fichier en utilisant le caractère `@` suivi d'un chemin, comme ceci :
@@ -120,15 +120,15 @@ npx liquidjs --template @./some-template.liquid
 Vous pouvez également utiliser la syntaxe `@-` pour lire le modèle depuis `stdin` :
 
 ``` bash
-echo '{{"hello" | capitalize}}' | npx liquidjs --template @-
+echo '{% raw %}{{{% endraw %}"hello" | capitalize{% raw %}}}{% endraw %}' | npx liquidjs --template @-
 ```
 
 Un contexte peut être transmis de la même manière (c'est-à-dire en ligne, à partir d'un chemin ou via `stdin`). Les trois suivants sont équivalents :
 
 ``` bash
-npx liquidjs --template 'Hello, {{ name }}!' --context '{"name": "Snake"}'
-npx liquidjs --template 'Hello, {{ name }}!' --context @./some-context.json
-echo '{"name": "Snake"}' | npx liquidjs --template 'Hello, {{ name }}!' --context @-
+npx liquidjs --template 'Hello, {% raw %}{{{% endraw %} name {% raw %}}}{% endraw %}!' --context '{"name": "Snake"}'
+npx liquidjs --template 'Hello, {% raw %}{{{% endraw %} name {% raw %}}}{% endraw %}!' --context @./some-context.json
+echo '{"name": "Snake"}' | npx liquidjs --template 'Hello, {% raw %}{{{% endraw %} name {% raw %}}}{% endraw %}!' --context @-
 ```
 
 Notez que vous ne pouvez utiliser `stdin` avec le spécificateur  `@-` que pour un seul argument. Si vous essayez de l'utiliser à la fois pour `--template` et `--context`, vous obtiendrez une erreur.
@@ -136,7 +136,7 @@ Notez que vous ne pouvez utiliser `stdin` avec le spécificateur  `@-` que pour 
 La sortie rendue est écrite sur `stdout` par défaut, mais vous pouvez également spécifier un fichier de sortie (si le fichier existe, il sera écrasé) :
 
 ``` bash
-npx liquidjs --template '{{"hello" | capitalize}}' --output ./hello.txt
+npx liquidjs --template '{% raw %}{{{% endraw %}"hello" | capitalize{% raw %}}}{% endraw %}' --output ./hello.txt
 ```
 
 Vous pouvez également transmettre un certain nombre d'options pour personnaliser le comportement de rendu du modèle. Par exemple, l'option --js-truthy peut être utilisée pour activer la véracité de JavaScript :
@@ -174,11 +174,11 @@ De plus, il peut également s'agir d'une implémentation de cache personnalisée
 
 **root** est utilisé pour spécifier les répertoires de modèles permettant à LiquidJS de rechercher et de lire les fichiers de modèles. Peut être une chaîne unique ou un tableau de chaînes. Voir [Render Files](https://liquidjs.com/tutorials/render-file.html){:target="_blank"} pour plus de détails.
 
-**layouts** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `{ % layout % }`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
+**layouts** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `{% raw %}{%{% endraw %} layout {% raw %}%}{% endraw %}`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
 
-**partials** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `{ % render % }` et `{ % include % }`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
+**partials** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `{% raw %}{%{% endraw %} render {% raw %}%}{% endraw %}` et `{% raw %}{%{% endraw %} include {% raw %}%}{% endraw %}`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
 
-**relativeReference** est défini sur `true` par défaut pour autoriser les noms de fichiers relatifs. Notez que les fichiers relativement référencés doivent également se trouver dans la racine correspondante. Par exemple, vous pouvez référencer un autre fichier comme `{ % render ../foo/bar % }` tant que `../foo/bar` se trouve également dans le répertoire `partials`.
+**relativeReference** est défini sur `true` par défaut pour autoriser les noms de fichiers relatifs. Notez que les fichiers relativement référencés doivent également se trouver dans la racine correspondante. Par exemple, vous pouvez référencer un autre fichier comme `{% raw %}{%{% endraw %} render ../foo/bar {% raw %}%}{% endraw %}` tant que `../foo/bar` se trouve également dans le répertoire `partials`.
 
 ### dynamicPartials
 
@@ -187,13 +187,13 @@ De plus, il peut également s'agir d'une implémentation de cache personnalisée
 **dynamicPartials** indique s'il faut ou non traiter les arguments de nom de fichier dans les balises include, render et layout comme une variable. La valeur par défaut est `true`. Par exemple, le rendu de l'extrait suivant avec scope `{ file: 'foo.html' }` inclura le `foo.html` :
 
 ``` js
-{ % include file % }
+{% raw %}{%{% endraw %} include file {% raw %}%}{% endraw %}
 ```
 
 En définissant `dynamicPartials: false`, LiquidJS essaiera d'inclure le fichier nommé `file`, ce qui est étrange mais permet une syntaxe plus simple si vos relations de modèle sont statiques :
 
 ``` js
-{ % liquid foo.html % }
+{% raw %}{%{% endraw %} liquid foo.html {% raw %}%}{% endraw %}
 ```
 > **Piège courant** : LiquidJS définit par défaut cette option sur `true` pour être compatible avec shopify/liquid, mais si vous venez de [eleventy](https://github.com/11ty/eleventy){:target="_blank"}, elle est définie sur `false` par défaut (voir [Quoted Include Paths](https://www.11ty.dev/docs/languages/liquid/#quoted-include-paths){:target="_blank"}) qui, je crois, essaie d'être compatible avec Jekyll.
 
@@ -209,12 +209,12 @@ Par exemple, dans le modèle suivant, `name.html` n'est pas cité, `header` et `
 
 ``` html
 // entry template
-{ % include article.html header="HEADER" content="CONTENT" % }
+{% raw %}{%{% endraw %} include article.html header="HEADER" content="CONTENT" {% raw %}%}{% endraw %}
 
 // article.html
 <article>
-  <header>{{include.header}}</header>
-  {{include.content}}
+  <header>{% raw %}{{{% endraw %}include.header{% raw %}}}{% endraw %}</header>
+  {% raw %}{{{% endraw %}include.content{% raw %}}}{% endraw %}
 </article>
 ```
 
@@ -223,8 +223,8 @@ Par exemple, dans le modèle suivant, `name.html` n'est pas cité, `header` et `
 `extname` définit le nom d'extension par défaut à ajouter aux noms de fichiers si le nom de fichier n'a pas de nom d'extension. La valeur par défaut est `''`, ce qui signifie qu'il est désactivé par défaut. En le réglant sur `.liquid` :
 
 ``` html
-{ % render "foo" % }  there's no extname, adds `.liquid` and loads foo.liquid
-{ % render "foo.html" % }  there is an extname already, loads foo.html directly
+{% raw %}{%{% endraw %} render "foo" {% raw %}%}{% endraw %}  there's no extname, adds `.liquid` and loads foo.liquid
+{% raw %}{%{% endraw %} render "foo.html" {% raw %}%}{% endraw %}  there is an extname already, loads foo.html directly
 ```
 
 > **Legacy Versions** : Avant la version 2.0.1, `extname est défini par défaut sur `.liquid`. Pour changer cela, vous devez définir explicitement `extname: ''`. Voir [#41](https://github.com/harttle/liquidjs/issues/41){:target="_blank"} pour plus de détails.
@@ -285,7 +285,7 @@ Les options **greedy**, **trimOutputLeft**, **trimOutputRight**, **trimTagLeft**
 
 ### Parameter Order
 
-Les ordres de paramètres sont ignorés par défaut, car ea `{ % for i in (1..8) reversed limit:3 % }` exécutera toujours la `limit` avant `reversed`, même si `reversed` se produit avant la `limit`. Pour que l'ordre des paramètres soit respecté, définissez **orderedFilterParameters** sur `true`. Sa valeur par défaut est `false`.
+Les ordres de paramètres sont ignorés par défaut, car ea `{% raw %}{%{% endraw %} for i in (1..8) reversed limit:3 {% raw %}%}{% endraw %}` exécutera toujours la `limit` avant `reversed`, même si `reversed` se produit avant la `limit`. Pour que l'ordre des paramètres soit respecté, définissez **orderedFilterParameters** sur `true`. Sa valeur par défaut est `false`.
 
 ## Render Files
 
@@ -303,7 +303,7 @@ Par exemple, vous disposez d'un répertoire de modèles comme celui-ci :
   └── world.liquid
 ```
 
-`hello.liquid` contient une seule ligne `name : {{name}}`.
+`hello.liquid` contient une seule ligne `name : {% raw %}{{{% endraw %}name{% raw %}}}{% endraw %}`.
 
 Enregistrez maintenant le contenu suivant dans `index.js` :
 
@@ -339,7 +339,7 @@ var engine = new Liquid({
 
 > **Chemins relatifs** : Les chemins relatifs dans `root` seront résolus par rapport à `cwd()`.
 
-Lorsque `{ % render "foo" % }` est rendu ou que `liquid.renderFile('foo')` est appelé, les fichiers suivants seront recherchés et le premier fichier existant sera utilisé :
+Lorsque `{% raw %}{%{% endraw %} render "foo" {% raw %}%}{% endraw %}` est rendu ou que `liquid.renderFile('foo')` est appelé, les fichiers suivants seront recherchés et le premier fichier existant sera utilisé :
 
 - `cwd()`/views/foo.liquid
 - `cwd()`/views/partials/foo.liquid
@@ -394,7 +394,7 @@ Pour faciliter le rendu sans fichiers, il existe une option de `templates` perme
 ``` js
 const engine = new Liquid({
   templates: {
-    'views/entry': 'header { % include "../partials/footer" % }',
+    'views/entry': 'header {% raw %}{%{% endraw %} include "../partials/footer" {% raw %}%}{% endraw %}',
     'partials/footer': 'footer'
   }
 })
@@ -411,13 +411,13 @@ Pour les fichiers modèles suivants :
 
 ``` js
 // file: color.liquid
-color: '{{ color }}' shape: '{{ shape }}'
+color: '{% raw %}{{{% endraw %} color {% raw %}}}{% endraw %}' shape: '{% raw %}{{{% endraw %} shape {% raw %}}}{% endraw %}'
 
 // file: theme.liquid
-{ % assign shape = 'circle' % }
-{ % render 'color.liquid' % }
-{ % render 'color.liquid' with 'red' % }
-{ % render 'color.liquid', color: 'yellow', shape: 'square' % }
+{% raw %}{%{% endraw %} assign shape = 'circle' {% raw %}%}{% endraw %}
+{% raw %}{%{% endraw %} render 'color.liquid' {% raw %}%}{% endraw %}
+{% raw %}{%{% endraw %} render 'color.liquid' with 'red' {% raw %}%}{% endraw %}
+{% raw %}{%{% endraw %} render 'color.liquid', color: 'yellow', shape: 'square' {% raw %}%}{% endraw %}
 ```
 
 Le résultat sera :
@@ -438,12 +438,12 @@ Pour les fichiers modèles suivants :
 ``` js
 // file: default-layout.liquid
 Header
-{ % block content % }My default content{ % endblock % }
+{% raw %}{%{% endraw %} block content {% raw %}%}{% endraw %}My default content{% raw %}{%{% endraw %} endblock {% raw %}%}{% endraw %}
 Footer
 
 // file: page.liquid
-{ % layout "default-layout.liquid" % }
-{ % block content % }My page content{ % endblock % }
+{% raw %}{%{% endraw %} layout "default-layout.liquid" {% raw %}%}{% endraw %}
+{% raw %}{%{% endraw %} block content {% raw %}%}{% endraw %}My page content{% raw %}{%{% endraw %} endblock {% raw %}%}{% endraw %}
 ```
 
 La sortie de `page.liquid` :
@@ -528,7 +528,7 @@ Les API [.parse()](https://liquidjs.com/api/classes/Liquid.html#parse){:target="
 Analyser à partir de la chaîne :
 
 ``` js
-var tpl = engine.parse('{{name | capitalize}}');
+var tpl = engine.parse('{% raw %}{{{% endraw %}name | capitalize{% raw %}}}{% endraw %}');
 
 engine.renderSync(tpl, {name: 'alice'}) // 'Alice'
 engine.renderSync(tpl, {name: 'bob'}) // 'Bob'
@@ -537,7 +537,7 @@ engine.renderSync(tpl, {name: 'bob'}) // 'Bob'
 Analyser à partir du fichier :
 
 ``` js
-var tpl = engine.parseFileSync('hello');    // contents of `hello.liquid`: {{name}}
+var tpl = engine.parseFileSync('hello');    // contents of `hello.liquid`: {% raw %}{{{% endraw %}name{% raw %}}}{% endraw %}
 
 engine.renderSync(tpl, {name: 'alice'}) // 'Alice'
 engine.renderSync(tpl, {name: 'bob'}) // 'Bob'
@@ -576,7 +576,7 @@ Par défaut, la sortie n'est pas échappée. Bien que vous puissiez utiliser le 
 Saisir :
 
 ``` js
-{{ "1 < 2" | escape }}
+{% raw %}{{{% endraw %} "1 < 2" | escape {% raw %}}}{% endraw %}
 ```
 
 Sortie :
@@ -592,8 +592,8 @@ Dans les cas où les variables ne sont généralement pas fiables, [outputEscape
 Saisir :
 
 ``` js
-{{ "1 < 2" }}
-{{ "<button>OK</button>" | raw }}
+{% raw %}{{{% endraw %} "1 < 2" {% raw %}}}{% endraw %}
+{% raw %}{{{% endraw %} "<button>OK</button>" | raw {% raw %}}}{% endraw %}
 ```
 
 Sortie :
@@ -605,22 +605,22 @@ Sortie :
 
 ### Liquid Escape
 
-Pour désactiver le langage Liquid et les chaînes de sortie telles que `{ {` et `{ %`, la balise [raw](https://liquidjs.com/filters/raw.html){:target="_blank"} peut être utilisée.
+Pour désactiver le langage Liquid et les chaînes de sortie telles que `{ {` et `{% raw %}{%{% endraw %}`, la balise [raw](https://liquidjs.com/filters/raw.html){:target="_blank"} peut être utilisée.
 
 Saisir :
 
 ``` js
-{ % raw % }
-  In LiquidJS, {{ this | escape }} will be HTML-escaped, but
-  {{{ that }}} will not.
-{ % endraw % }
+{% raw %}{%{% endraw %} raw {% raw %}%}{% endraw %}
+  In LiquidJS, {% raw %}{{{% endraw %} this | escape {% raw %}}}{% endraw %} will be HTML-escaped, but
+  {% raw %}{{{% endraw %}{ that {% raw %}}}{% endraw %}} will not.
+{% raw %}{%{% endraw %} endraw {% raw %}%}{% endraw %}
 ```
 
 Sortie :
 
 ``` js
-In LiquidJS, {{ this | escape }} will be HTML-escaped, but
-{{{ that }}} will not.
+In LiquidJS, {% raw %}{{{% endraw %} this | escape {% raw %}}}{% endraw %} will be HTML-escaped, but
+{% raw %}{{{% endraw %}{ that {% raw %}}}{% endraw %}} will not.
 ```
 
 Dans les chaînes littérales du modèle LiquidJS, `\` peut être utilisé pour échapper aux caractères spéciaux dans la syntaxe des chaînes. Par exemple:
@@ -628,7 +628,7 @@ Dans les chaînes littérales du modèle LiquidJS, `\` peut être utilisé pour 
 Saisir :
 
 ``` js
-{{ "\"" }}
+{% raw %}{{{% endraw %} "\"" {% raw %}}}{% endraw %}
 ```
 
 Sortie :
@@ -640,7 +640,7 @@ Sortie :
 ### Register Tags
 
 ``` js
-// Usage: { % upper name % }
+// Usage: {% raw %}{%{% endraw %} upper name {% raw %}%}{% endraw %}
 import { Value, TagToken, Context, Emitter, TopLevelToken } from 'liquidjs'
 
 engine.registerTag('upper', {
@@ -660,7 +660,7 @@ engine.registerTag('upper', {
 Pour une implémentation de balises complexe, vous pouvez également fournir une classe de balises :
 
 ``` js
-// Usage: { % upper name:"alice" % }
+// Usage: {% raw %}{%{% endraw %} upper name:"alice" {% raw %}%}{% endraw %}
 import { Hash, Tag, TagToken, Context, Emitter, TopLevelToken, Liquid } from 'liquidjs'
 
 engine.registerTag('upper', class UpperTag extends Tag {
@@ -682,14 +682,14 @@ engine.registerTag('upper', class UpperTag extends Tag {
 ### Register Filters
 
 ``` js
-// Usage: {{ name | upper }}
+// Usage: {% raw %}{{{% endraw %} name | upper {% raw %}}}{% endraw %}
 engine.registerFilter('upper', v => v.toUpperCase())
 ```
 
 Les arguments de filtre seront transmis à la fonction de filtre enregistrée, par exemple :
 
 ``` js
-// Usage: {{ 1 | add: 2, 3 }}
+// Usage: {% raw %}{{{% endraw %} 1 | add: 2, 3 {% raw %}}}{% endraw %}
 engine.registerFilter('add', (initial, arg1, arg2) => initial + arg1 + arg2)
 ```
 
@@ -722,7 +722,7 @@ engine.registerFilter('plus', disabledFilter('plus'));
 Comme indiqué dans [Register Filters/Tags](https://liquidjs.com/tutorials/register-filters-tags.html){:target="_blank"}, nous pouvons accéder aux arguments de filtre directement dans la fonction de filtre comme :
 
 ``` js
-// Usage: {{ 1 | add: 2, 3 }}
+// Usage: {% raw %}{{{% endraw %} 1 | add: 2, 3 {% raw %}}}{% endraw %}
 // Output: 6
 engine.registerFilter('add', (initial, arg1, arg2) => initial + arg1 + arg2)
 ```
@@ -730,7 +730,7 @@ engine.registerFilter('add', (initial, arg1, arg2) => initial + arg1 + arg2)
 Lorsqu'il s'agit de filtres avec état, par exemple pour transformer un chemin d'URL en URL complète, nous devrons accéder à une `origin` dans la portée actuelle :
 
 ``` js
-// Usage: {{ '/index.html' | fullURL }}
+// Usage: {% raw %}{{{% endraw %} '/index.html' | fullURL {% raw %}}}{% endraw %}
 // Scope: { origin: "https://liquidjs.com" }
 // Output: https://liquidjs.com/index.html
 
@@ -750,7 +750,7 @@ Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/1/>{:target="_blank"}
 Comme indiqué dans [Register Filters/Tags](https://liquidjs.com/tutorials/register-filters-tags.html){:target="_blank"}, les paramètres de balise sont disponibles sur `tagToken.args` sous forme de chaîne raw. Par exemple:
 
 ``` js
-// Usage: { % random foo bar coo % }
+// Usage: {% raw %}{%{% endraw %} random foo bar coo {% raw %}%}{% endraw %}
 // Output: "foo", "bar" or "coo"
 engine.registerTag('random', {
   parse(tagToken) {
@@ -775,7 +775,7 @@ Parfois, nous avons besoin de balises plus dynamiques et souhaitons transmettre 
 Le modèle modifié suivant contient également 3 valeurs aléatoires, mais ce sont des valeurs au lieu de chaînes statiques. Le premier est une chaîne littérale, le deuxième est un identifiant, le troisième est une séquence d'accès à la propriété contenant deux identifiants.
 
 ``` js
-{ % random "foo" bar obj.coo % }
+{% raw %}{%{% endraw %} random "foo" bar obj.coo {% raw %}%}{% endraw %}
 ```
 
 Il peut être difficile d'analyser tous ces cas manuellement, mais il existe une classe [Tokenizer](https://liquidjs.com/api/classes/Tokenizer.html){:target="_blank"} dans LiquidJS que vous pouvez utiliser.
@@ -810,7 +810,7 @@ L'appel de cette balise dans scope `{ bar: "bar", obj: { coo: "coo" } }` donne e
 Les paramètres nommés deviennent très pratiques lorsqu’il y a des paramètres facultatifs ou de nombreux paramètres, auquel cas l’ordre des paramètres n’a pas d’importance. C’est exactement pour cela que la classe Hash a été inventée.
 
 ``` js
-{ % random from:2, to:max % }
+{% raw %}{%{% endraw %} random from:2, to:max {% raw %}%}{% endraw %}
 ```
 
 Dans l'exemple ci-dessus, nous essayons de générer un nombre aléatoire dans la plage [2, max]. Nous utiliserons `Hash` pour analyser les paramètres `from` et `to`.
@@ -833,7 +833,7 @@ engine.registerTag('random', {
 })
 ```
 
-Le rendu de `{ % random from:2, to:max % }` dans la portée `{ max: 10 }` générera un nombre aléatoire dans la plage [2, 10]. Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/4/>{:target="_blank"}
+Le rendu de `{% raw %}{%{% endraw %} random from:2, to:max {% raw %}%}{% endraw %}` dans la portée `{ max: 10 }` générera un nombre aléatoire dans la plage [2, 10]. Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/4/>{:target="_blank"}
 
 ## Render Tag Content
 
@@ -844,9 +844,9 @@ Les balises personnalisées peuvent avoir un modèle de contenu et peuvent être
 Nous commencerons avec une balise simple `wrap` qui enveloppe son contenu dans un élément `<div class="wrapper"></div>` :
 
 ``` js
-{ % wrap % }
-  {{ "hello world!" | capitalize }}
-{ % endwrap % }
+{% raw %}{%{% endraw %} wrap {% raw %}%}{% endraw %}
+  {% raw %}{{{% endraw %} "hello world!" | capitalize {% raw %}}}{% endraw %}
+{% raw %}{%{% endraw %} endwrap {% raw %}%}{% endraw %}
 ```
 
 Résultat attendu :
@@ -859,8 +859,8 @@ Résultat attendu :
 
 Tout d'abord, [register](https://liquidjs.com/tutorials/register-filters-tags.html){:target="_blank"} une balise avec le nom `wrap` et analysez le contenu dans `this.tpls`. Ici dans `parse(tagToken, remainTokens)`,
 
-- `tagToken` est le jeton actuel `{ % wrap % }`, et
-- `remainTokens` est un tableau de tous les jetons suivant `{ % wrap % }` jusqu'à la fin de ce fichier modèle.
+- `tagToken` est le jeton actuel `{% raw %}{%{% endraw %} wrap {% raw %}%}{% endraw %}`, et
+- `remainTokens` est un tableau de tous les jetons suivant `{% raw %}{%{% endraw %} wrap {% raw %}%}{% endraw %}` jusqu'à la fin de ce fichier modèle.
 
 En gros, ce que nous devons faire est de prendre `.shift()` suffisamment de balises jusqu'à `remainTokens` ce que nous obtenions un jeton `endwrap` (le nom peut être arbitraire, mais par convention, nous avons besoin qu'il soit `endwrap`). Et s'il n'y a pas de `endwrap` jusqu'à la fin du fichier modèle, nous devons lancer un tag-not-closed `Error`.
 
@@ -878,7 +878,7 @@ engine.registerTag('wrap', {
       }
       // parse token into template
       // parseToken() may consume more than 1 tokens
-      // e.g. { % if % }...{ % endif % }
+      // e.g. {% raw %}{%{% endraw %} if {% raw %}%}{% endraw %}...{% raw %}{%{% endraw %} endif {% raw %}%}{% endraw %}
       let tpl = this.liquid.parser.parseToken(token, remainTokens)
       this.tpls.push(tpl)
     }
@@ -917,9 +917,9 @@ Voici une version JSFiddle : <https://jsfiddle.net/por0zcn1/4/>{:target="_blank"
 La balise `wrap` ci-dessus ne semble pas très utile, sans utiliser cette balise, nous pouvons de toute façon restituer le contenu. Nous allons maintenant implémenter une balise `repeat` pour restituer le contenu 2 fois (nous pouvons également ajouter un paramètre pour restituer des fois arbitraires).
 
 ``` js
-{ % repeat % }
-  {{ repeat.i }}. {{ "hello world!" | capitalize }}
-{ % endrepeat % }`
+{% raw %}{%{% endraw %} repeat {% raw %}%}{% endraw %}
+  {% raw %}{{{% endraw %} repeat.i {% raw %}}}{% endraw %}. {% raw %}{{{% endraw %} "hello world!" | capitalize {% raw %}}}{% endraw %}
+{% raw %}{%{% endraw %} endrepeat {% raw %}%}{% endraw %}`
 ```
 
 Résultats attendus :
@@ -982,7 +982,7 @@ class SettingsDrop extends Drop {
 }
 
 const engine = new Liquid()
-const template = `foo: {{settings.foo}}, bar: {{settings.bar}}`
+const template = `foo: {% raw %}{{{% endraw %}settings.foo{% raw %}}}{% endraw %}, bar: {% raw %}{{{% endraw %}settings.bar{% raw %}}}{% endraw %}`
 const context = { settings: new SettingsDrop() }
 // Outputs: "foo: FOO, bar: BAR"
 engine.parseAndRender(template, context).then(html => console.log(html))
@@ -1009,7 +1009,7 @@ class SettingsDrop extends Drop {
 
 const engine = new Liquid()
 // Outputs: "COO"
-engine.parseAndRender("{{settings.coo}}", { settings: new SettingsDrop() })
+engine.parseAndRender("{% raw %}{{{% endraw %}settings.coo{% raw %}}}{% endraw %}", { settings: new SettingsDrop() })
   .then(html => console.log(html))
 ```
 
@@ -1027,7 +1027,7 @@ class DBDrop extends Drop {
 
 const engine = new Liquid()
 const context = { db: new DBDrop() }
-engine.parseAndRender("{{db.coo}}", context).then(html => console.log(html))
+engine.parseAndRender("{% raw %}{{{% endraw %}db.coo{% raw %}}}{% endraw %}", context).then(html => console.log(html))
 ```
 
 Les gouttes peuvent implémenter une `valueOf()` méthode dont la valeur de retour peut être utilisée pour se remplacer elle-même dans la sortie. Par exemple :
@@ -1044,7 +1044,7 @@ class ColorDrop extends Drop {
 const engine = new Liquid()
 const context = { color: new ColorDrop() }
 // Outputs: "red"
-engine.parseAndRender("{{color}}", context).then(html => console.log(html))
+engine.parseAndRender("{% raw %}{{{% endraw %}color{% raw %}}}{% endraw %}", context).then(html => console.log(html))
 ```
 
 ### toLiquid
@@ -1070,7 +1070,7 @@ const context = {
 
 const engine = new Liquid()
 // Outputs: "Yang, Jun"
-engine.parseAndRender("{{person.name}}", context).then(html => console.log(html))
+engine.parseAndRender("{% raw %}{{{% endraw %}person.name{% raw %}}}{% endraw %}", context).then(html => console.log(html))
 ```
 
 Bien sûr, vous pouvez également renvoyer une `PersonDrop` instance dans la `toLiquid()` méthode et implémenter cette fonctionnalité dans `PersonDrop` :
@@ -1099,7 +1099,7 @@ const context = {
 
 const engine = new Liquid()
 // Outputs: "Yang, Jun"
-engine.parseAndRender("{{person.name}}", context).then(html => console.log(html))
+engine.parseAndRender("{% raw %}{{{% endraw %}person.name{% raw %}}}{% endraw %}", context).then(html => console.log(html))
 ```
 
 > `toLiquid()` vs. `valueOf()` Différence
@@ -1116,9 +1116,9 @@ LiquidJS lui-même implémente plusieurs gouttes intégrées pour faciliter l'é
 Utile pour vérifier si une variable de chaîne est `false`, `null`, `undefined`, une chaîne vide ou une chaîne contenant uniquement des caractères vides.
 
 ``` js
-{ % unless author == blank % }
-    {{author}}
-{ % endif % }
+{% raw %}{%{% endraw %} unless author == blank {% raw %}%}{% endraw %}
+    {% raw %}{{{% endraw %}author{% raw %}}}{% endraw %}
+{% raw %}{%{% endraw %} endif {% raw %}%}{% endraw %}
 ```
 
 #### empty
@@ -1126,9 +1126,9 @@ Utile pour vérifier si une variable de chaîne est `false`, `null`, `undefined`
 Utile pour vérifier si un tableau, une chaîne ou un objet est vide.
 
 ``` js
-{ % if authors == empty % }
+{% raw %}{%{% endraw %} if authors == empty {% raw %}%}{% endraw %}
     Author list is empty
-{ % endif % }
+{% raw %}{%{% endraw %} endif {% raw %}%}{% endraw %}
 ```
 
 > `empty` mise en œuvre : Pour les tableaux et les chaînes, LiquidJS vérifie leurs `.length` propriétés. Pour les objets, LiquidJS effectue des appels `Object.keys()` pour vérifier s'ils ont des clés.
@@ -1138,9 +1138,9 @@ Utile pour vérifier si un tableau, une chaîne ou un objet est vide.
 `nil` Drop est utilisé pour vérifier si une variable n'est pas définie ou définie comme `null` ou `undefined`, essentiellement équivalent à `== null` la vérification JavaScript.
 
 ``` js
-{ % if nonexistent == nil % }
+{% raw %}{%{% endraw %} if nonexistent == nil {% raw %}%}{% endraw %}
     null variable
-{ % endif % }
+{% raw %}{%{% endraw %} endif {% raw %}%}{% endraw %}
 ```
 
 ### Other Drops
@@ -1176,7 +1176,7 @@ LiquidJS utilise une implémentation asynchrone basée sur un générateur pour 
 ``` js
 import { TagToken, Context, Emitter, TopLevelToken, Value, Tag, Liquid } from 'liquidjs'
 
-// Usage: { % upper "alice" % }
+// Usage: {% raw %}{%{% endraw %} upper "alice" {% raw %}%}{% endraw %}
 // Output: ALICE
 engine.registerTag('upper', class UpperTag extends Tag {
   private value: Value
@@ -1220,7 +1220,7 @@ Vous pouvez convertir un générateur en promesse en utilisant [toPromise](https
 ``` js
 import { TagToken, Context, Emitter, TopLevelToken, Value, Tag, Liquid, toPromise } from 'liquidjs'
 
-// Usage: { % upper "alice" % }
+// Usage: {% raw %}{%{% endraw %} upper "alice" {% raw %}%}{% endraw %}
 // Output: ALICE
 engine.registerTag('upper', class UpperTag extends Tag {
   private value: Value
@@ -1242,7 +1242,7 @@ Si votre balise est destinée à être utilisée uniquement de manière asynchro
 ``` js
 import { toPromise, TagToken, Context, Emitter, TopLevelToken, Value, Tag, Liquid } from 'liquidjs'
 
-// Usage: { % upper "alice" % }
+// Usage: {% raw %}{%{% endraw %} upper "alice" {% raw %}%}{% endraw %}
 // Output: ALICE
 engine.registerTag('upper', class UpperTag extends Tag {
   private value: Value
@@ -1266,8 +1266,8 @@ Pour garder le code source propre et indenté, nous ajoutons des espaces à nos 
 Par défaut, toutes les balises et lignes de balisage de sortie génèrent un NL (`\n`) et des espaces s'il y a une indentation. Par exemple :
 
 ``` js
-{ %  author = "harttle" % }
-{{ author }}
+{% raw %}{%{% endraw %}  author = "harttle" {% raw %}%}{% endraw %}
+{% raw %}{{{% endraw %} author {% raw %}}}{% endraw %}
 ```
 
 Sorties (notez le lien vide) :
@@ -1276,11 +1276,11 @@ Sorties (notez le lien vide) :
 harttle
 ```
 
-Nous pouvons inclure des tirets dans la syntaxe de votre balise (`{{-`, `-}}`, `{ %-`, `-% }`) pour supprimer les espaces à gauche ou à droite. Par exemple :
+Nous pouvons inclure des tirets dans la syntaxe de votre balise (`{% raw %}{{{% endraw %}-`, `-{% raw %}}}{% endraw %}`, `{% raw %}{%{% endraw %}-`, `-{% raw %}%}{% endraw %}`) pour supprimer les espaces à gauche ou à droite. Par exemple :
 
 ``` js
-{ % assign author = "harttle" -% }
-{{ author }}
+{% raw %}{%{% endraw %} assign author = "harttle" -{% raw %}%}{% endraw %}
+{% raw %}{{{% endraw %} author {% raw %}}}{% endraw %}
 ```
 
 Résultats :
@@ -1289,7 +1289,7 @@ Résultats :
 harttle
 ```
 
-Dans ce cas, il `-% }` supprime l'espace blanc du côté droit de la `assign` balise.
+Dans ce cas, il `-{% raw %}%}{% endraw %}` supprime l'espace blanc du côté droit de la `assign` balise.
 
 ### via Options
 
@@ -1336,7 +1336,7 @@ const engine = new Liquid()
 
 engine.plugin(require('./upup.js'));
 engine
-    .parseAndRender('{{ "foo" | upup }}')
+    .parseAndRender('{% raw %}{{{% endraw %} "foo" | upup {% raw %}}}{% endraw %}')
     .then(console.log)  // outputs "FOO"
 ```
 
@@ -1356,7 +1356,7 @@ Les opérateurs LiquidJS sont très simples et différents. Il existe 2 types d'
 - Opérateurs de comparaison : `==`, `!=`, `>`, `<`, `>=`, `<=`
 - Opérateurs logiques : `or`, `and`, `contains`
 
-Ainsi, les opérateurs numériques ne sont pas pris en charge et vous ne pouvez même pas ajouter deux nombres comme cela `{{a + b}}`, à la place nous avons besoin d'un filtre `{{ a | plus: b}}`. En fait, `+` c'est un nom de variable valide dans LiquidJS.
+Ainsi, les opérateurs numériques ne sont pas pris en charge et vous ne pouvez même pas ajouter deux nombres comme cela `{% raw %}{{{% endraw %}a + b{% raw %}}}{% endraw %}`, à la place nous avons besoin d'un filtre `{% raw %}{{{% endraw %} a | plus: b{% raw %}}}{% endraw %}`. En fait, `+` c'est un nom de variable valide dans LiquidJS.
 
 ### Priorité
 
@@ -1436,12 +1436,12 @@ Un PC typique gère `1e8` (100 M) de caractères sans problème.
 Restreindre la taille du modèle seul n'est pas suffisant car des boucles dynamiques avec un grand nombre peuvent se produire au moment du rendu. [renderLimit](https://liquidjs.com/api/interfaces/LiquidOptions.html#renderLimit){:target="_blank"} atténue ce problème en limitant le temps consommé par chaque `render()` appel.
 
 ``` js
-{ %- for i in (1..10000000) -% }
-    order: {{i}}
-{ %- endfor -% }
+{% raw %}{%{% endraw %}- for i in (1..10000000) -{% raw %}%}{% endraw %}
+    order: {% raw %}{{{% endraw %}i{% raw %}}}{% endraw %}
+{% raw %}{%{% endraw %}- endfor -{% raw %}%}{% endraw %}
 ```
 
-Le temps de rendu est vérifié pour chaque modèle (avant le rendu de chaque modèle). Dans l'exemple ci-dessus, il y a 2 modèles dans la boucle : `order:` et `{{i}}`, le temps de rendu sera vérifié 10000000x2 fois.
+Le temps de rendu est vérifié pour chaque modèle (avant le rendu de chaque modèle). Dans l'exemple ci-dessus, il y a 2 modèles dans la boucle : `order:` et `{% raw %}{{{% endraw %}i{% raw %}}}{% endraw %}`, le temps de rendu sera vérifié 10000000x2 fois.
 
 Pour les balises et les filtres chronophages au sein d'un seul modèle, le processus peut toujours se bloquer. Pour un rendu entièrement contrôlé, pensez à utiliser un gestionnaire de processus comme [paralleljs](https://www.npmjs.com/package/paralleljs){:target="_blank"}.
 
@@ -1450,10 +1450,10 @@ Pour les balises et les filtres chronophages au sein d'un seul modèle, le proce
 Même avec un nombre réduit de modèles et d'itérations, l'utilisation de la mémoire peut augmenter de manière exponentielle. Dans l'exemple suivant, la mémoire double à chaque itération :
 
 ``` js
-{ % assign array = "1,2,3" | split: "," % }
-{ % for i in (1..32) % }
-    { % assign array = array | concat: array % }
-{ % endfor % }
+{% raw %}{%{% endraw %} assign array = "1,2,3" | split: "," {% raw %}%}{% endraw %}
+{% raw %}{%{% endraw %} for i in (1..32) {% raw %}%}{% endraw %}
+    {% raw %}{%{% endraw %} assign array = array | concat: array {% raw %}%}{% endraw %}
+{% raw %}{%{% endraw %} endfor {% raw %}%}{% endraw %}
 ```
 
 [memoryLimit](https://liquidjs.com/api/interfaces/LiquidOptions.html#memoryLimit){:target="_blank"} limite les filtres sensibles à la mémoire pour éviter une allocation de mémoire excessive. Comme [JavaScript utilise GC pour gérer la mémoire](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Memory_management){:target="_blank"}, `memoryLimit` limite uniquement le nombre total d'objets alloués par les filtres sensibles à la mémoire dans LiquidJS et peut donc ne pas refléter l'empreinte mémoire réelle.
